# arithmetic-coding

./: .clang-format  CMakeLists.txt  Null File Specification.md  README.md  ac-gui.glade  ac-gui.glade~  main.cpp  outline.md  ui.glade  ui.glade~
include/: Decoder.h  Encoder.h  FileData.hpp  FileReader.h  FileWriter.h  NumberLine.h  common.h  common.hpp
src/: Decoder.cpp  Encoder.cpp  FileReader.cpp  FileWriter.cpp  NumberLine.cpp
tests/: sample_bin.null  smalltest.txt  testfile.txt  testwritefile.txt
